Finished notebooks 30 and 31

--- a/notebooks/species-distribution-30-overview.ipynb
+++ b/notebooks/species-distribution-30-overview.ipynb
@@ -2,6 +2,7 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "b7e7dc48-3ce6-452d-bd75-09fca2f00c2b",
       "metadata": {},
       "source": [
         "# \n",
@@ -13,25 +14,27 @@
         "<li>How might climate change affect animal migrations?</li>\n",
         "<li>Do you notice any animal migrations in your area?</li>\n",
         "</ol></div></div>"
-      ],
-      "id": "b7e7dc48-3ce6-452d-bd75-09fca2f00c2b"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "09ea9f1d-2434-41ec-9d7b-65eb3153d6d6",
       "metadata": {},
       "source": [
-        "YOUR ANSWER HERE"
-      ],
-      "id": "09ea9f1d-2434-41ec-9d7b-65eb3153d6d6"
+        "# 1. Temperature, climate, food, reproduction, seasons, loss of habitat\n",
+        "# 2. Drought causes loss of vegetation which can cause other animals to migrate to find food, and predatory species migrate to follow. It can also cause animals to lose their natural environment and may move to warmer/colder climates where not only food may be more abundant and even assessible but also to find a more livable habitat.\n",
+        "# 3. My homestate (northern NM) there has been less Birds and bugs and cold blooded snakes have moved to populated areas where they didnt exist before.  \n",
+        "\n"
+      ]
     }
   ],
-  "nbformat": 4,
-  "nbformat_minor": 5,
   "metadata": {
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     }
-  }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
