--- a/notebooks/species-distribution-32-normalize.ipynb
+++ b/notebooks/species-distribution-32-normalize.ipynb
@@ -2,6 +2,7 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "4ee0065c-5c7e-4bc0-876e-0663e803d08b",
       "metadata": {},
       "source": [
         "# STEP 4: Count the number of observations in each ecosystem, during\n",
@@ -20,21 +21,21 @@
         "### Set up your analysis\n",
         "\n",
         "First things first – let’s load your stored variables."
-      ],
-      "id": "4ee0065c-5c7e-4bc0-876e-0663e803d08b"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
+      "id": "5e95e651",
       "metadata": {},
       "outputs": [],
       "source": [
         "%store -r"
-      ],
-      "id": "5e95e651"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "10497a80-169f-44b4-b0d8-40c1c155745b",
       "metadata": {},
       "source": [
         "### Identify the ecoregion for each observation\n",
@@ -53,35 +54,48 @@
         "<li>Select only the columns you will need for your plot.</li>\n",
         "<li>Run the code.</li>\n",
         "</ol></div></div>"
-      ],
-      "id": "10497a80-169f-44b4-b0d8-40c1c155745b"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 3,
+      "id": "6beddd17",
       "metadata": {
         "highlight": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'tecoregions_gdf' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m gbif_tecoregion_gdf \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m----> 2\u001b[0m     \u001b[43mtecoregions_gdf\u001b[49m\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;66;03m# Match the CRS of the GBIF data and the ecoregions\u001b[39;00m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;241m.\u001b[39mto_crs(gbif_gdf\u001b[38;5;241m.\u001b[39mcrs)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;66;03m# Find ecoregion for each observation\u001b[39;00m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;241m.\u001b[39msjoin(\n\u001b[1;32m      7\u001b[0m         gbif_gdf,\n\u001b[1;32m      8\u001b[0m         how\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minner\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m      9\u001b[0m         predicate\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mintersects\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;66;03m# Select the required columns\u001b[39;00m\n\u001b[1;32m     11\u001b[0m     [[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmonth\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgeometry\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[1;32m     12\u001b[0m     \n\u001b[1;32m     13\u001b[0m )\n\u001b[1;32m     14\u001b[0m gbif_tecoregion_gdf\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'tecoregions_gdf' is not defined"
+          ]
+        }
+      ],
       "source": [
-        "gbif_ecoregion_gdf = (\n",
+        "gbif_tecoregion_gdf = (\n",
         "    ecoregions_gdf\n",
         "    # Match the CRS of the GBIF data and the ecoregions\n",
         "    .to_crs(gbif_gdf.crs)\n",
         "    # Find ecoregion for each observation\n",
         "    .sjoin(\n",
         "        gbif_gdf,\n",
-        "        how='', \n",
-        "        predicate='')\n",
+        "        how='inner', \n",
+        "        predicate='contains')\n",
         "    # Select the required columns\n",
+        "    [['month','geometry','name']]\n",
         "    \n",
         ")\n",
-        "gbif_ecoregion_gdf"
-      ],
-      "id": "6beddd17"
+        "gbif_tecoregion_gdf"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "6cf0387b-2dd6-400d-96ef-83e0e4898279",
       "metadata": {},
       "source": [
         "### Count the observations in each ecoregion each month\n",
@@ -97,12 +111,12 @@
         "<li>Run the code – it will normalize the number of occurrences by month\n",
         "and ecoretion.</li>\n",
         "</ol></div></div>"
-      ],
-      "id": "6cf0387b-2dd6-400d-96ef-83e0e4898279"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 5,
+      "id": "32800690",
       "metadata": {
         "highlight": true
       },
@@ -129,11 +143,11 @@
         "    occurrence_df\n",
         "    ...\n",
         ")"
-      ],
-      "id": "32800690"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "0420b4ff-991b-4649-acd5-1d8f92bae4e1",
       "metadata": {},
       "source": [
         "### Normalize the observations\n",
@@ -142,12 +156,12 @@
         "<li>Divide occurrences by the mean occurrences by month AND the mean\n",
         "occurrences by ecoregion</li>\n",
         "</ol></div></div>"
-      ],
-      "id": "0420b4ff-991b-4649-acd5-1d8f92bae4e1"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 7,
+      "id": "6a85c18d",
       "metadata": {
         "highlight": true
       },
@@ -159,11 +173,11 @@
         "    ...\n",
         ")\n",
         "occurrence_df"
-      ],
-      "id": "6a85c18d"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "b660f645-eb45-4674-a0d9-90028d40978a",
       "metadata": {},
       "source": [
         "<link rel=\"stylesheet\" type=\"text/css\" href=\"./assets/styles.css\"><div class=\"callout callout-style-default callout-titled callout-task\"><div class=\"callout-header\"><div class=\"callout-icon-container\"><i class=\"callout-icon\"></i></div><div class=\"callout-title-container flex-fill\">Try It</div></div><div class=\"callout-body-container callout-body\"><p>Make sure to store the new version of your <code>DataFrame</code> for\n",
@@ -172,29 +186,28 @@
         "<div class=\"sourceCode\" id=\"cb1\"><pre\n",
         "class=\"sourceCode python cell-code\"><code class=\"sourceCode python\"><span id=\"cb1-1\"><a href=\"#cb1-1\" aria-hidden=\"true\" tabindex=\"-1\"></a><span class=\"op\">%</span>store occurrence_df</span></code></pre></div>\n",
         "</div></div></div>"
-      ],
-      "id": "b660f645-eb45-4674-a0d9-90028d40978a"
+      ]
     }
   ],
-  "nbformat": 4,
-  "nbformat_minor": 5,
   "metadata": {
     "kernelspec": {
-      "name": "python3",
       "display_name": "Python 3 (ipykernel)",
-      "language": "python"
+      "language": "python",
+      "name": "python3"
     },
     "language_info": {
-      "name": "python",
       "codemirror_mode": {
         "name": "ipython",
-        "version": "3"
+        "version": 3
       },
       "file_extension": ".py",
       "mimetype": "text/x-python",
+      "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.14"
+      "version": "3.10.11"
     }
-  }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
