--- a/notebooks/species-distribution-32-normalize.ipynb
+++ b/notebooks/species-distribution-32-normalize.ipynb
@@ -58,27 +58,129 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "id": "6beddd17",
       "metadata": {
         "highlight": true
       },
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'tecoregions_gdf' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m gbif_tecoregion_gdf \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m----> 2\u001b[0m     \u001b[43mtecoregions_gdf\u001b[49m\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;66;03m# Match the CRS of the GBIF data and the ecoregions\u001b[39;00m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;241m.\u001b[39mto_crs(gbif_gdf\u001b[38;5;241m.\u001b[39mcrs)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;66;03m# Find ecoregion for each observation\u001b[39;00m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;241m.\u001b[39msjoin(\n\u001b[1;32m      7\u001b[0m         gbif_gdf,\n\u001b[1;32m      8\u001b[0m         how\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minner\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m      9\u001b[0m         predicate\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mintersects\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;66;03m# Select the required columns\u001b[39;00m\n\u001b[1;32m     11\u001b[0m     [[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmonth\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgeometry\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[1;32m     12\u001b[0m     \n\u001b[1;32m     13\u001b[0m )\n\u001b[1;32m     14\u001b[0m gbif_tecoregion_gdf\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'tecoregions_gdf' is not defined"
-          ]
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>month</th>\n",
+              "      <th>name</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>tecoregion</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>5</td>\n",
+              "      <td>Alberta-British Columbia foothills forests</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>5</td>\n",
+              "      <td>Alberta-British Columbia foothills forests</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>6</td>\n",
+              "      <td>Alberta-British Columbia foothills forests</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>7</td>\n",
+              "      <td>Alberta-British Columbia foothills forests</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>6</td>\n",
+              "      <td>Alberta-British Columbia foothills forests</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>839</th>\n",
+              "      <td>10</td>\n",
+              "      <td>North Atlantic moist mixed forests</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>839</th>\n",
+              "      <td>9</td>\n",
+              "      <td>North Atlantic moist mixed forests</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>839</th>\n",
+              "      <td>9</td>\n",
+              "      <td>North Atlantic moist mixed forests</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>839</th>\n",
+              "      <td>9</td>\n",
+              "      <td>North Atlantic moist mixed forests</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>839</th>\n",
+              "      <td>9</td>\n",
+              "      <td>North Atlantic moist mixed forests</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>159537 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "            month                                        name\n",
+              "tecoregion                                                   \n",
+              "12              5  Alberta-British Columbia foothills forests\n",
+              "12              5  Alberta-British Columbia foothills forests\n",
+              "12              6  Alberta-British Columbia foothills forests\n",
+              "12              7  Alberta-British Columbia foothills forests\n",
+              "12              6  Alberta-British Columbia foothills forests\n",
+              "...           ...                                         ...\n",
+              "839            10          North Atlantic moist mixed forests\n",
+              "839             9          North Atlantic moist mixed forests\n",
+              "839             9          North Atlantic moist mixed forests\n",
+              "839             9          North Atlantic moist mixed forests\n",
+              "839             9          North Atlantic moist mixed forests\n",
+              "\n",
+              "[159537 rows x 2 columns]"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "gbif_tecoregion_gdf = (\n",
-        "    ecoregions_gdf\n",
+        "    tecoregions_gdf\n",
         "    # Match the CRS of the GBIF data and the ecoregions\n",
         "    .to_crs(gbif_gdf.crs)\n",
         "    # Find ecoregion for each observation\n",
@@ -87,7 +189,7 @@
         "        how='inner', \n",
         "        predicate='contains')\n",
         "    # Select the required columns\n",
-        "    [['month','geometry','name']]\n",
+        "    [['month','name']]\n",
         "    \n",
         ")\n",
         "gbif_tecoregion_gdf"
@@ -115,34 +217,141 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 22,
       "id": "32800690",
       "metadata": {
         "highlight": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>occurrences</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>month</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>7.666667</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>7.333333</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>5.666667</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>140.472222</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>1207.169492</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>1041.571429</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>572.894737</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>164.972973</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>260.897436</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>32.825000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>5.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>7.500000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       occurrences\n",
+              "month             \n",
+              "1         7.666667\n",
+              "2         7.333333\n",
+              "3         5.666667\n",
+              "4       140.472222\n",
+              "5      1207.169492\n",
+              "6      1041.571429\n",
+              "7       572.894737\n",
+              "8       164.972973\n",
+              "9       260.897436\n",
+              "10       32.825000\n",
+              "11        5.000000\n",
+              "12        7.500000"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "occurrence_df = (\n",
-        "    gbif_ecoregion_gdf\n",
+        "    gbif_tecoregion_gdf\n",
         "    # For each ecoregion, for each month...\n",
-        "    .groupby(columns_to_group_by)\n",
+        "    .groupby(['tecoregion','month'])\n",
         "    # ...count the number of occurrences\n",
         "    .agg(occurrences=('name', 'count'))\n",
         ")\n",
         "\n",
         "# Get rid of rare observations (possible misidentification?)\n",
-        "occurrence_df = occurrence_df[...]\n",
+        "occurrence_df = occurrence_df[occurrence_df.occurrences>1]\n",
         "\n",
         "# Take the mean by ecoregion\n",
-        "mean_occurrences_by_ecoregion = (\n",
+        "mean_occurrences_by_tecoregion = (\n",
         "    occurrence_df\n",
-        "    ...\n",
+        "    .groupby(['tecoregion'])\n",
+        "    .mean()\n",
         ")\n",
         "# Take the mean by month\n",
         "mean_occurrences_by_month = (\n",
         "    occurrence_df\n",
-        "    ...\n",
-        ")"
+        "    .groupby(['month'])\n",
+        "    .mean()\n",
+        ")\n",
+        "#mean_occurrences_by_tecoregion\n",
+        "mean_occurrences_by_month"
       ]
     },
     {
@@ -160,17 +369,139 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 25,
       "id": "6a85c18d",
       "metadata": {
         "highlight": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th>occurrences</th>\n",
+              "      <th>norm_occurrences</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>tecoregion</th>\n",
+              "      <th>month</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"3\" valign=\"top\">12</th>\n",
+              "      <th>5</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0.000828</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0.000960</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0.001746</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"2\" valign=\"top\">16</th>\n",
+              "      <th>4</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0.000010</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>2980</td>\n",
+              "      <td>0.001732</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"3\" valign=\"top\">833</th>\n",
+              "      <th>7</th>\n",
+              "      <td>293</td>\n",
+              "      <td>0.002173</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>40</td>\n",
+              "      <td>0.001030</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>11</td>\n",
+              "      <td>0.000179</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"2\" valign=\"top\">839</th>\n",
+              "      <th>9</th>\n",
+              "      <td>25</td>\n",
+              "      <td>0.005989</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>7</td>\n",
+              "      <td>0.013328</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>308 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                  occurrences  norm_occurrences\n",
+              "tecoregion month                               \n",
+              "12         5                2          0.000828\n",
+              "           6                2          0.000960\n",
+              "           7                2          0.001746\n",
+              "16         4                2          0.000010\n",
+              "           5             2980          0.001732\n",
+              "...                       ...               ...\n",
+              "833        7              293          0.002173\n",
+              "           8               40          0.001030\n",
+              "           9               11          0.000179\n",
+              "839        9               25          0.005989\n",
+              "           10               7          0.013328\n",
+              "\n",
+              "[308 rows x 2 columns]"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Normalize by space and time for sampling effort\n",
         "occurrence_df['norm_occurrences'] = (\n",
         "    occurrence_df\n",
-        "    ...\n",
+        "    /mean_occurrences_by_tecoregion\n",
+        "    /mean_occurrences_by_month\n",
         ")\n",
         "occurrence_df"
       ]
@@ -186,6 +517,24 @@
         "<div class=\"sourceCode\" id=\"cb1\"><pre\n",
         "class=\"sourceCode python cell-code\"><code class=\"sourceCode python\"><span id=\"cb1-1\"><a href=\"#cb1-1\" aria-hidden=\"true\" tabindex=\"-1\"></a><span class=\"op\">%</span>store occurrence_df</span></code></pre></div>\n",
         "</div></div></div>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "id": "a5bc78ad",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Stored 'occurrence_df' (DataFrame)\n"
+          ]
+        }
+      ],
+      "source": [
+        "%store occurrence_df"
       ]
     }
   ],
