--- a/notebooks/species-distribution-32-normalize.ipynb
+++ b/notebooks/species-distribution-32-normalize.ipynb
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "id": "6beddd17",
       "metadata": {
         "highlight": true
@@ -173,7 +173,7 @@
               "[159537 rows x 2 columns]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -217,7 +217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 3,
       "id": "32800690",
       "metadata": {
         "highlight": true
@@ -321,7 +321,7 @@
               "12        7.500000"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -369,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 4,
       "id": "6a85c18d",
       "metadata": {
         "highlight": true
@@ -491,7 +491,7 @@
               "[308 rows x 2 columns]"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -540,7 +540,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
