Described plot 33 complete

--- a/notebooks/species-distribution-31-wrangle.ipynb
+++ b/notebooks/species-distribution-31-wrangle.ipynb
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "id": "aff9d628",
       "metadata": {
         "highlight": true
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "id": "32d6451c",
       "metadata": {
         "highlight": true
@@ -134,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "id": "323f4d4a",
       "metadata": {
         "highlight": true
@@ -160,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "id": "79090efd",
       "metadata": {},
       "outputs": [
@@ -193,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "id": "3929e977",
       "metadata": {},
       "outputs": [
@@ -241,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "id": "1b959634",
       "metadata": {},
       "outputs": [
@@ -251,7 +251,7 @@
               "<Axes: >"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "id": "779c69dd",
       "metadata": {},
       "outputs": [
@@ -383,7 +383,7 @@
               "4        42.544277         -72.44836      5"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -457,7 +457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "id": "ac7c5db3",
       "metadata": {
         "highlight": true
@@ -566,7 +566,7 @@
               "[162775 rows x 2 columns]"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -587,7 +587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "id": "b40817cc",
       "metadata": {},
       "outputs": [
@@ -597,7 +597,7 @@
               "<Axes: >"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -631,7 +631,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "id": "8fca4f85",
       "metadata": {},
       "outputs": [
@@ -641,6 +641,17 @@
           "text": [
             "Stored 'tecoregions_gdf' (GeoDataFrame)\n",
             "Stored 'gbif_gdf' (GeoDataFrame)\n"
+          ]
+        },
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+            "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+            "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+            "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
           ]
         }
       ],
