--- a/notebooks/species-distribution-98-download.ipynb
+++ b/notebooks/species-distribution-98-download.ipynb
@@ -32,7 +32,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
+      "id": "ce77ff22",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%store -r"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
       "id": "75e6717e",
       "metadata": {},
       "outputs": [
@@ -40,17 +50,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Collecting pygbif\n",
-            "  Downloading pygbif-0.6.4-py3-none-any.whl.metadata (12 kB)\n",
+            "Requirement already satisfied: pygbif in /opt/conda/lib/python3.11/site-packages (0.6.4)\n",
             "Requirement already satisfied: requests>2.7 in /opt/conda/lib/python3.11/site-packages (from pygbif) (2.32.3)\n",
-            "Collecting requests-cache (from pygbif)\n",
-            "  Downloading requests_cache-1.2.1-py3-none-any.whl.metadata (9.9 kB)\n",
-            "Collecting geojson-rewind (from pygbif)\n",
-            "  Downloading geojson_rewind-1.1.0-py3-none-any.whl.metadata (4.5 kB)\n",
-            "Collecting geomet (from pygbif)\n",
-            "  Downloading geomet-1.1.0-py3-none-any.whl.metadata (11 kB)\n",
-            "Collecting appdirs>=1.4.3 (from pygbif)\n",
-            "  Downloading appdirs-1.4.4-py2.py3-none-any.whl.metadata (9.0 kB)\n",
+            "Requirement already satisfied: requests-cache in /opt/conda/lib/python3.11/site-packages (from pygbif) (1.2.1)\n",
+            "Requirement already satisfied: geojson-rewind in /opt/conda/lib/python3.11/site-packages (from pygbif) (1.1.0)\n",
+            "Requirement already satisfied: geomet in /opt/conda/lib/python3.11/site-packages (from pygbif) (1.1.0)\n",
+            "Requirement already satisfied: appdirs>=1.4.3 in /opt/conda/lib/python3.11/site-packages (from pygbif) (1.4.4)\n",
             "Requirement already satisfied: matplotlib in /opt/conda/lib/python3.11/site-packages (from pygbif) (3.9.2)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/conda/lib/python3.11/site-packages (from requests>2.7->pygbif) (3.3.2)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.11/site-packages (from requests>2.7->pygbif) (3.10)\n",
@@ -67,21 +72,10 @@
             "Requirement already satisfied: pyparsing>=2.3.1 in /opt/conda/lib/python3.11/site-packages (from matplotlib->pygbif) (3.1.4)\n",
             "Requirement already satisfied: python-dateutil>=2.7 in /opt/conda/lib/python3.11/site-packages (from matplotlib->pygbif) (2.9.0)\n",
             "Requirement already satisfied: attrs>=21.2 in /opt/conda/lib/python3.11/site-packages (from requests-cache->pygbif) (24.2.0)\n",
-            "Collecting cattrs>=22.2 (from requests-cache->pygbif)\n",
-            "  Downloading cattrs-24.1.2-py3-none-any.whl.metadata (8.4 kB)\n",
+            "Requirement already satisfied: cattrs>=22.2 in /opt/conda/lib/python3.11/site-packages (from requests-cache->pygbif) (24.1.2)\n",
             "Requirement already satisfied: platformdirs>=2.5 in /opt/conda/lib/python3.11/site-packages (from requests-cache->pygbif) (4.3.6)\n",
-            "Collecting url-normalize>=1.4 (from requests-cache->pygbif)\n",
-            "  Downloading url_normalize-1.4.3-py2.py3-none-any.whl.metadata (3.1 kB)\n",
-            "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.11/site-packages (from python-dateutil>=2.7->matplotlib->pygbif) (1.16.0)\n",
-            "Downloading pygbif-0.6.4-py3-none-any.whl (64 kB)\n",
-            "Downloading appdirs-1.4.4-py2.py3-none-any.whl (9.6 kB)\n",
-            "Downloading geojson_rewind-1.1.0-py3-none-any.whl (5.2 kB)\n",
-            "Downloading geomet-1.1.0-py3-none-any.whl (31 kB)\n",
-            "Downloading requests_cache-1.2.1-py3-none-any.whl (61 kB)\n",
-            "Downloading cattrs-24.1.2-py3-none-any.whl (66 kB)\n",
-            "Downloading url_normalize-1.4.3-py2.py3-none-any.whl (6.8 kB)\n",
-            "Installing collected packages: appdirs, url-normalize, geomet, geojson-rewind, cattrs, requests-cache, pygbif\n",
-            "Successfully installed appdirs-1.4.4 cattrs-24.1.2 geojson-rewind-1.1.0 geomet-1.1.0 pygbif-0.6.4 requests-cache-1.2.1 url-normalize-1.4.3\n"
+            "Requirement already satisfied: url-normalize>=1.4 in /opt/conda/lib/python3.11/site-packages (from requests-cache->pygbif) (1.4.3)\n",
+            "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.11/site-packages (from python-dateutil>=2.7->matplotlib->pygbif) (1.16.0)\n"
           ]
         }
       ],
@@ -105,31 +99,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "id": "601c7278",
       "metadata": {
         "highlight": true
       },
       "outputs": [],
       "source": [
+        "import os\n",
+        "import pathlib\n",
         "import time\n",
         "import zipfile\n",
         "from getpass import getpass\n",
         "from glob import glob\n",
         "\n",
         "import pygbif.occurrences as occ\n",
-        "import pygbif.species as species"
+        "import pygbif.species as species\n",
+        "import geopandas as gpd\n",
+        "import pandas as pd"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 12,
       "id": "9cf408e1",
       "metadata": {
         "highlight": true
       },
       "outputs": [],
       "source": [
+        "#Define URL\n",
+        "#pygbif_url = \n",
+        "\n",
         "# Create data directory in the home folder\n",
         "data_dir = os.path.join(\n",
         "    # Home directory\n",
@@ -138,12 +139,12 @@
         "    'earth-analytics',\n",
         "    'data',\n",
         "    # Project directory\n",
-        "    'your-project-directory-name-here',\n",
+        "    'mycorrhizal-fungi',\n",
         ")\n",
         "os.makedirs(data_dir, exist_ok=True)\n",
         "\n",
         "# Define the directory name for GBIF data\n",
-        "gbif_dir = os.path.join(data_dir, 'your-gbif-data-directory-name-here')"
+        "gbif_dir = os.path.join(data_dir, 'gbif')"
       ]
     },
     {
@@ -172,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 19,
       "id": "989f737e",
       "metadata": {},
       "outputs": [],
@@ -194,6 +195,25 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 20,
+      "id": "59c9ba8c",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "aragon.victoria@hotmail.com\n"
+          ]
+        }
+      ],
+      "source": [
+        "#os.environ['GBIF_USER']\n",
+        "!echo $GBIF_USER"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "8b3d472f-2079-4eb9-9454-6ee95c40c2e7",
       "metadata": {},
@@ -209,15 +229,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 21,
       "id": "90a15d5c",
       "metadata": {
         "highlight": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "('Marmosa mexicana', 2439876)"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Query species\n",
-        "species_info = species.name_lookup(species_name, rank='SPECIES')\n",
+        "species_info = species.name_lookup('marmosa mexicana merriam', rank='SPECIES')\n",
         "\n",
         "# Get the first result\n",
         "first_result = species_info['results'][0]\n",
@@ -255,31 +286,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 22,
       "id": "0bdc80c5",
       "metadata": {
         "highlight": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "Exception",
+          "evalue": "error: JSON parse error: Cannot construct instance of `org.gbif.api.model.predicate.EqualsPredicate`, problem: <value> may not be empty; nested exception is com.fasterxml.jackson.databind.exc.ValueInstantiationException: Cannot construct instance of `org.gbif.api.model.predicate.EqualsPredicate`, problem: <value> may not be empty\n at [Source: UNKNOWN; line: -1, column: -1] (through reference chain: org.gbif.api.model.predicate.ConjunctionPredicate[\"predicates\"]->java.util.ArrayList[0]), with error status code 400check your number of active downloads.",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[22], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m glob(gbif_pattern):\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;66;03m# Only submit one request\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGBIF_DOWNLOAD_KEY\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m os\u001b[38;5;241m.\u001b[39menviron:\n\u001b[1;32m      6\u001b[0m         \u001b[38;5;66;03m# Submit query to GBIF\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m         gbif_query \u001b[38;5;241m=\u001b[39m \u001b[43mocc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdownload\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m            \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mspeciesKey = \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m            \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhasCoordinate = \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m            \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43myear = \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m        \u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m         os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGBIF_DOWNLOAD_KEY\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m gbif_query[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;66;03m# Wait for the download to build\u001b[39;00m\n",
+            "File \u001b[0;32m/opt/conda/lib/python3.11/site-packages/pygbif/occurrences/download.py:271\u001b[0m, in \u001b[0;36mdownload\u001b[0;34m(queries, format, user, pwd, email, pred_type)\u001b[0m\n\u001b[1;32m    268\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m predicate \u001b[38;5;129;01min\u001b[39;00m keyval:\n\u001b[1;32m    269\u001b[0m         req\u001b[38;5;241m.\u001b[39madd_predicate_dict(predicate)\n\u001b[0;32m--> 271\u001b[0m out \u001b[38;5;241m=\u001b[39m \u001b[43mreq\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpost_download\u001b[49m\u001b[43m(\u001b[49m\u001b[43muser\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpwd\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    272\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m out, req\u001b[38;5;241m.\u001b[39mpayload\n",
+            "File \u001b[0;32m/opt/conda/lib/python3.11/site-packages/pygbif/occurrences/download.py:482\u001b[0m, in \u001b[0;36mGbifDownload.post_download\u001b[0;34m(self, user, pwd)\u001b[0m\n\u001b[1;32m    475\u001b[0m r \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mpost(\n\u001b[1;32m    476\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39murl,\n\u001b[1;32m    477\u001b[0m     auth\u001b[38;5;241m=\u001b[39mrequests\u001b[38;5;241m.\u001b[39mauth\u001b[38;5;241m.\u001b[39mHTTPBasicAuth(user, pwd),\n\u001b[1;32m    478\u001b[0m     data\u001b[38;5;241m=\u001b[39mjson\u001b[38;5;241m.\u001b[39mdumps(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpayload),\n\u001b[1;32m    479\u001b[0m     headers\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheader,\n\u001b[1;32m    480\u001b[0m )\n\u001b[1;32m    481\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m r\u001b[38;5;241m.\u001b[39mstatus_code \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m203\u001b[39m:\n\u001b[0;32m--> 482\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\n\u001b[1;32m    483\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124merror: \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    484\u001b[0m         \u001b[38;5;241m+\u001b[39m r\u001b[38;5;241m.\u001b[39mtext\n\u001b[1;32m    485\u001b[0m         \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, with error status code \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    486\u001b[0m         \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(r\u001b[38;5;241m.\u001b[39mstatus_code)\n\u001b[1;32m    487\u001b[0m         \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcheck your number of active downloads.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    488\u001b[0m     )\n\u001b[1;32m    489\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    490\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrequest_id \u001b[38;5;241m=\u001b[39m r\u001b[38;5;241m.\u001b[39mtext\n",
+            "\u001b[0;31mException\u001b[0m: error: JSON parse error: Cannot construct instance of `org.gbif.api.model.predicate.EqualsPredicate`, problem: <value> may not be empty; nested exception is com.fasterxml.jackson.databind.exc.ValueInstantiationException: Cannot construct instance of `org.gbif.api.model.predicate.EqualsPredicate`, problem: <value> may not be empty\n at [Source: UNKNOWN; line: -1, column: -1] (through reference chain: org.gbif.api.model.predicate.ConjunctionPredicate[\"predicates\"]->java.util.ArrayList[0]), with error status code 400check your number of active downloads."
+          ]
+        }
+      ],
       "source": [
         "# Only download once\n",
-        "gbif_pattern = os.path.join(gbif_dir, csv_file_pattern)\n",
+        "gbif_pattern = os.path.join(gbif_dir, '*.csv')\n",
         "if not glob(gbif_pattern):\n",
-        "    # Submit query to GBIF\n",
-        "    gbif_query = occ.download([\n",
-        "        \"speciesKey = \",\n",
-        "        \"year = \",\n",
-        "        \"hasCoordinate = \",\n",
-        "    ])\n",
-        "    # Only download once\n",
+        "    # Only submit one request\n",
         "    if not 'GBIF_DOWNLOAD_KEY' in os.environ:\n",
+        "        # Submit query to GBIF\n",
+        "        gbif_query = occ.download([\n",
+        "            \"speciesKey = \",\n",
+        "            \"hasCoordinate = \",\n",
+        "            \"year = \",\n",
+        "        ])\n",
         "        os.environ['GBIF_DOWNLOAD_KEY'] = gbif_query[0]\n",
         "\n",
-        "        # Wait for the download to build\n",
+        "    # Wait for the download to build\n",
+        "    download_key = os.environ['GBIF_DOWNLOAD_KEY']\n",
+        "    wait = occ.download_meta(download_key)['status']\n",
+        "    while not wait=='SUCCEEDED':\n",
         "        wait = occ.download_meta(download_key)['status']\n",
-        "        while not wait=='SUCCEEDED':\n",
-        "            wait = occ.download_meta(download_key)['status']\n",
-        "            time.sleep(5)\n",
+        "        time.sleep(5)\n",
         "\n",
         "    # Download GBIF data\n",
         "    download_info = occ.download_get(\n",
@@ -290,7 +336,7 @@
         "    with zipfile.ZipFile(download_info['path']) as download_zip:\n",
         "        download_zip.extractall(path=gbif_dir)\n",
         "\n",
-        "# Find the extracted .csv file path\n",
+        "# Find the extracted .csv file path (take the first result)\n",
         "gbif_path = glob(gbif_pattern)[0]"
       ]
     },
@@ -325,12 +371,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 1,
       "id": "88e56065",
       "metadata": {
         "highlight": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'pd' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load the GBIF data\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m gbif_df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(\n\u001b[1;32m      3\u001b[0m     gbif_path, \n\u001b[1;32m      4\u001b[0m     \u001b[38;5;66;03m#delimiter='',\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;66;03m#index_col='',\u001b[39;00m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m#usecols=[]\u001b[39;00m\n\u001b[1;32m      7\u001b[0m )\n\u001b[1;32m      8\u001b[0m gbif_df\u001b[38;5;241m.\u001b[39mhead()\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# Load the GBIF data\n",
         "gbif_df = pd.read_csv(\n",
